fixing spacing issue in hero text

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -79,7 +79,7 @@ img {
 }
 
 .intro {
-	width: 23em;
+	width: 23.5em;
 	margin: 0 auto;
 	margin-bottom: 0.4em;
 	font-weight: normal;
